# snyk-jira-reporter

./: .gitignore  CODEOWNERS  README.md  UNMAPPED_REPOSITORIES.md  jira-automation.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml  jira-snyk.yaml
config/: exclude_files.json  jira_components_mapping.json  jira_components_mapping.schema.json
models/: models.py
scripts/: generate_component_report.py  jira-automation.py  models.py  validate_config.py
src/snyk_jira_reporter/: __init__.py  __main__.py
src/snyk_jira_reporter/cli/: __init__.py  application.py  args.py  config_loader.py
src/snyk_jira_reporter/clients/: jira_client.py  snyk_client.py
src/snyk_jira_reporter/config/: constants.py  settings.py
src/snyk_jira_reporter/exceptions/: exceptions.py
src/snyk_jira_reporter/models/: snyk_models.py  vulnerability.py
src/snyk_jira_reporter/services/: component_resolver.py  vulnerability_service.py
src/snyk_jira_reporter/utils/: adf_parser.py  file_loader.py  labels.py  parsing.py
tests/: conftest.py
tests/test_clients/: test_jira_client.py  test_jira_client_validation.py  test_snyk_client.py
tests/test_config/: test_settings.py
tests/test_models/: test_snyk_models.py  test_vulnerability.py
tests/test_services/: test_component_resolver.py  test_vulnerability_service.py
tests/test_utils/: test_file_loader.py  test_labels.py  test_parsing.py
utils/: utils.py
