[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "snyk-jira-reporter"
version = "1.0.0"
description = "Automated Snyk vulnerability to Jira ticket reporter"
requires-python = ">=3.9"
dependencies = [
    "jira>=3.8.0",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "requests>=2.28,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff>=0.4.0",
    "mypy>=1.8",
    "types-requests",
]

[project.scripts]
snyk-jira-reporter = "snyk_jira_reporter.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
packages = ["snyk_jira_reporter"]
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
